fix post-index spacing

--- a/assets/scss/postindex.scss
+++ b/assets/scss/postindex.scss
@@ -1,5 +1,7 @@
 .index-posts {
     padding-left: .5rem;
+    margin-top: -1rem;
+    margin-bottom: 2rem;
     a {
         font-family: $family-primary;
         color: $dark;
